[package]
name = "eyepee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
once_cell = "1.18.0"
reqwest = { version = "0.11.20", features = ["rustls", "json", "rustls-tls"] }
tokio = { version = "1.32.0", features = ["full"] }
